--- a/Decision-Tree-Regression.ipynb
+++ b/Decision-Tree-Regression.ipynb
@@ -787,7 +787,7 @@
    "id": "8da0d734-2032-4853-907a-8fa00a4b1e35",
    "metadata": {},
    "source": [
-    "# Splitting Training and Testing set AssertionError"
+    "# Splitting Training and Testing set"
    ]
   },
   {
